# cpp-boilerplate-idx

./: CMakeLists.txt  README.md  build.sh
.idx/: dev.nix
src/: main.cpp
